# todocmd

./: .gitignore  BUILD.md  Cargo.toml  LICENSE  README.md  RELEASE.md  SETUP.md  install.ps1  package-lock.json  package.json  tsconfig.json  uninstall.ps1  webpack.config.js
.github/workflows/: release.yml  test.yml
assets/: icon.icns
scripts/: build-icons.js
src/: global.d.ts  main.rs  main.ts  preload.ts
src/renderer/: App.css  App.tsx  global.d.ts  index.html  types.ts
src/renderer/components/: PreferencesModal.tsx  TodoFooter.tsx  TodoHeader.tsx  TodoInput.tsx  TodoItem.tsx  TodoList.tsx
src/renderer/hooks/: useKeyboardNavigation.ts
src/renderer/store/: preferencesStore.ts  todoStore.ts
src/renderer/types/: settings.ts
