[package]
name = "todocmd"
version = "2.0.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7", features = ["desktop"] }
dioxus-desktop = "0.7"
futures-timer = "3.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
global-hotkey = "0.7"
